# VitalTrackBackend

./: App.js  README.md  package-lock.json  package.json  pyproject.toml
src/vitaltrack/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  router.py
src/vitaltrack/api/: __init__.py  main.py  routes.py
src/vitaltrack/auth/: __init__.py  models.py  router.py  schemas.py  services.py  utils.py
src/vitaltrack/core/: __init__.py  database.py  dependencies.py  food_api.py  models.py  schemas.py  utils.py
src/vitaltrack/food/: __init__.py  models.py  router.py  schemas.py
src/vitaltrack/provider/: __init__.py  models.py  router.py  schemas.py  services.py  utils.py
src/vitaltrack/user/: __init__.py  models.py  router.py  schemas.py  services.py
